Переработана объектная система

--- a/game/index.html
+++ b/game/index.html
@@ -14,10 +14,18 @@
 
     <script src="/utils.js"></script>
     <script src="/Overworld.js"></script>
-    <script src="/GameObject.js"></script>
-    <script src="/Person.js"></script>
     <script src="/Sprite.js"></script>
+    <script src="/GameObject.js"></script>
     <script src="/OverworldMap.js"></script>
+
+    <script src="/Naruto.js"></script>
+    <script src="/Sakura.js"></script>
+    <script src="/Sasuke.js"></script>
+
+    <script src="/levels.js"></script>
+
+    
+    
     <script src="/Init.js"></script>
 
 </body>
