--- a/game/index.html
+++ b/game/index.html
@@ -18,6 +18,7 @@
     <script src="/GameObject.js"></script>
     <script src="/OverworldMap.js"></script>
 
+    <script src="/Person.js"></script>
     <script src="/Naruto.js"></script>
     <script src="/Sakura.js"></script>
     <script src="/Sasuke.js"></script>
