Добавлена анимация движения персонажей
Также добавлено звуковое сопровождение

--- a/game/index.html
+++ b/game/index.html
@@ -10,24 +10,24 @@
         <canvas class="game-canvas" width="400" height="200"></canvas>
     </div>
 
+    <button id="fun" onclick="soundStart()">Включение мелодии</button>
+    <button id="sad" onclick="soundStop()">Выключение мелодии</button>
+
     <button class="start">Go!</button>
 
-    <script src="/utils.js"></script>
-    <script src="/Overworld.js"></script>
-    <script src="/Sprite.js"></script>
-    <script src="/GameObject.js"></script>
-    <script src="/OverworldMap.js"></script>
+    <script src="/sound.js">       </script>
+    <script src="/utils.js">        </script>
+    <script src="/Overworld.js">    </script>
+    <script src="/Sprite.js">       </script>
+    <script src="/GameObject.js">   </script>
+    <script src="/OverworldMap.js"> </script>
+    <script src="/Person.js">       </script>
+    <script src="/Naruto.js">       </script>
+    <script src="/Sakura.js">       </script>
+    <script src="/Sasuke.js">       </script>
+    <script src="/levels.js">       </script>
+    <script src="/Init.js">         </script>
 
-    <script src="/Person.js"></script>
-    <script src="/Naruto.js"></script>
-    <script src="/Sakura.js"></script>
-    <script src="/Sasuke.js"></script>
-
-    <script src="/levels.js"></script>
-
-    
-    
-    <script src="/Init.js"></script>
 
 </body>
 </html>
