--- a/game/index.html
+++ b/game/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
     <title>Naruto game</title>
-    <link href="/styles.css" type="text/css" rel="stylesheet">
+    <link href="/styles/global.css" type="text/css" rel="stylesheet">
+    <link href="/styles/TextMessage.css" type="text/css" rel="stylesheet">
     <link type="image/x-icon" href="/images/n.png" rel="shortcut icon">
 </head>
 <body>
@@ -15,18 +16,20 @@
 
     <button class="start">Go!</button>
 
-    <script src="/sound.js">       </script>
-    <script src="/utils.js">        </script>
-    <script src="/Overworld.js">    </script>
-    <script src="/Sprite.js">       </script>
-    <script src="/GameObject.js">   </script>
-    <script src="/OverworldMap.js"> </script>
-    <script src="/Person.js">       </script>
-    <script src="/Naruto.js">       </script>
-    <script src="/Sakura.js">       </script>
-    <script src="/Sasuke.js">       </script>
-    <script src="/levels.js">       </script>
-    <script src="/Init.js">         </script>
+    <script src="/sound.js">          </script>
+    <script src="/utils.js">          </script>
+    <script src="/Overworld.js">      </script>
+    <script src="/Sprite.js">         </script>
+    <script src="/GameObject.js">     </script>
+    <script src="/OverworldMap.js">   </script>
+    <script src="/OverworldEvent.js"> </script>
+    <script src="/TextMessage.js">    </script>
+    <script src="/Person.js">         </script>
+    <script src="/Naruto.js">         </script>
+    <script src="/Sakura.js">         </script>
+    <script src="/Sasuke.js">         </script>
+    <script src="/levels.js">         </script>
+    <script src="/Init.js">           </script>
 
 
 </body>
