--- a/game/index.html
+++ b/game/index.html
@@ -24,6 +24,7 @@
     <script src="/OverworldMap.js">   </script>
     <script src="/OverworldEvent.js"> </script>
     <script src="/TextMessage.js">    </script>
+    <script src="/RevealingText.js">    </script>
     <script src="/Person.js">         </script>
     <script src="/Naruto.js">         </script>
     <script src="/Sakura.js">         </script>
