Добавлена обработка событий
А ещё добавлен враг (sand ninja)

--- a/game/index.html
+++ b/game/index.html
@@ -31,10 +31,12 @@
     <script src="/TextMessage.js">    </script>
     <script src="/RevealingText.js">  </script>
     <script src="/SceneTransition.js"></script>
+    <script src="/Handler.js"></script>
     <script src="/Person.js">         </script>
     <script src="/Naruto.js">         </script>
     <script src="/Sakura.js">         </script>
     <script src="/Sasuke.js">         </script>
+    <script src="/Enemy.js">         </script>
     <script src="/levels.js">         </script>
     <script src="/CodeConverter.js">  </script>
     <script src="/Init.js">           </script>
